<!-- Portrait orientation only -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PcView" >

    <RelativeLayout
        android:id="@+id/pcFragmentContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/settingsButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        >

        <TextView
            android:id="@+id/no_pc_found_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center"
            android:text="@string/no_pc_added"/>

    </RelativeLayout>

    <ImageButton
        android:id="@+id/settingsButton"
        android:contentDescription="@string/title_settings"
        android:layout_width="70dp"
        android:layout_height="65dp"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_settings"
        android:preferKeepClear="true"
        style="?android:attr/borderlessButtonStyle"/>

    <ImageButton
        android:id="@+id/helpButton"
        android:contentDescription="@string/help"
        android:layout_width="70dp"
        android:layout_height="65dp"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/settingsButton"
        android:src="@drawable/ic_help"
        android:preferKeepClear="true"
        style="?android:attr/borderlessButtonStyle"/>
    
    <ImageButton
        android:id="@+id/manuallyAddPc"
        android:contentDescription="@string/title_add_pc"
        android:layout_width="70dp"
        android:layout_height="65dp"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_add"
        android:preferKeepClear="true"
        style="?android:attr/borderlessButtonStyle"/>

</RelativeLayout>
